--- a/.env
+++ b/.env
@@ -31,4 +31,5 @@ APP_SECRET=6ea808a08e2b43f2f35d9169265590fe
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+MAILER_DSN=smtp://fax_mail@ribegroupe.com:nt94cw37@smtp.auth.orange-business.com:587
 ###< doctrine/doctrine-bundle ###
